--- a/Exp8/INDEX.HTML
+++ b/Exp8/INDEX.HTML
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Course Curriculum</title>
+    <title>Document</title>
 </head>
 <body>
-
-    <!-- Heading -->
-    <h1 align="center">B.Tech Computer Science - Course Curriculum</h1>
-    <p align="center"><b>Session:</b> 2025-2029 &copy; ABES Engineering College Ghaziabad</p>
-      <hr>   
-
-    <!-- Introduction -->
-    <h2>Introduction</h2>
-    <p>
+ <h1 style="color:blue; text-align:center;">B.Tech Computer Science - Course Curriculum</h1>
+   <p align="center"><b>Session:</b> 2025-2029 &copy; ABES Engineering College <i>Ghaziabad</i></p>
+   <hr>
+   <h2>Introduction</h2>
+   <p>
         The <b>Bachelor of Technology in Computer Science</b> is designed to provide 
         students with <i>strong foundations</i> in computer science, 
         software engineering, and <u>emerging technologies</u>.
     </p>
-
+    <OL>
+        <LI>HTML</LI>
+        <LI>CSS</LI>
+        <LI>JAVASCRIPT</LI>
+    </OL>
+    <UL>
+        <LI>HTML</LI>
+        <LI>CSS</LI>
+        <LI>JAVASCRIPT</LI>
+    </UL>
     <!-- Ordered List -->
     <h2>Semester 1 Subjects (Ordered List)</h2>
     <ol>
@@ -29,8 +34,7 @@
         <li>Web Designing Workshop-1</li>
         <li>Essential of AI</li>
     </ol>
-
-    <!-- Unordered List -->
+<!-- Unordered List -->
     <h2>Programming Languages Covered (Unordered List)</h2>
     <ul>
         <li>C</li>
@@ -39,19 +43,16 @@
         <li>Python</li>
         <li>JavaScript</li>
     </ul>
-
-    <!-- Description List -->
-    <h2>Key Terms (Description List)</h2>
-    <dl>
-        <dt><b>AI</b></dt>
-        <dd>- Artificial Intelligence, the study of intelligent machines.</dd>
-        <dt><b>DBMS</b></dt>
-        <dd>- Database Management System, software to handle databases.</dd>
-        <dt><b>OS</b></dt>
-        <dd>- Operating System, software managing hardware resources.</dd>
-    </dl>
-
-    <!-- Nested List -->
+    <!-- DL,DT,DD DESCRIPTION LIST -->
+     <DL>
+        <DT>ECE</DT>
+        <DD>Electronics and Communication Engineering</DD>
+        <DT>CSE</DT>
+        <DD>Computer Science Engineering</DD>
+        <DT>ME</DT>
+        <DD>Mechanical Engineering</DD>
+     </DL>
+     <!-- Nested List -->
     <h2>Elective Subjects (Nested List)</h2>
     <ul>
         <li>Artificial Intelligence
@@ -84,10 +85,25 @@
             </ul>
         </li>
     </ol>
+<HR>
+<a href="https://www.google.com/"> GOOGLE JI</a>
+<!-- VIDEO -->
+<h2>Entertainment Buzz</h2>
+    <p>New movie trailer released today. Fans are excited!</p>
+    <!-- Local Video -->
+    <video width="560" height="315" controls>
+        <source src="sample-video.mp4" type="video/mp4">
+    
+    </video>
 
+    <!-- AUDIO -->
+ <!-- Podcast Section -->
+    <h2>News Podcast</h2>
+    <p>Listen to today’s top headlines:</p>
+    <!-- Audio -->
+    <audio controls>
+        <source src="sample-audio.mp3" type="audio/mp3">   
+    </audio>
     <hr>
-    <!-- Footer -->
-    <p align="center">&copy; 2025 Curriculum Design &reg; University of Learning</p> -->
-
 </body>
 </html>
