--- a/exp1.html
+++ b/exp1.html
@@ -87,7 +87,7 @@
 
     <hr>
     <!-- Footer -->
-    <p align="center">&copy; 2025 Curriculum Design &reg; University of Learning</p> -->
+    <p align="center">&copy; 2025 Curriculum Design &reg; ABESEC AUTONOMOUS INSTITUTE</p> -->
 
 </body>
 </html>
