anchor tag example

--- a/anchor.html
+++ b/anchor.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anchor Tag Demo</title>
 </head>  
 <body>
 <h1>Anchor Tag Examples</h1>
 <!-- External link (opens in new tab, safe) -->
-<a href="https://www.example.com" target="_blank" rel="noopener noreferrer" title="Open example.com in new tab">
+<a href="https://www.example.com" target="_blank">
        Visit Example.com
 </a>
 <br>
-<!-- Contact page -->
-<a href="contact.html" title="Go to contact page">Contact Us</a>
+<!-- Contact page (internal link) -->
+<a href="contact.html">Contact Us</a>
 <br>
 <!-- Link to an email -->
 <a href="mailto:teacher@example.edu">Email the teacher</a>
 <br>
-<!-- Link to a section on the same page -->
-<a href="#contact-section">Jump to Contact Section</a>
-<br>
 <!-- Force browser to download the file -->
 <a href="/files/report.pdf" download>Download Course Report</a>
+<br
+<!-- Clickable link to call a number on mobile devices  -->
+   <p>  Call us at <a href="tel:+919876543210">Contact me</a> </p> 
+  <!-- Location link -->
+   <a href="https://maps.app.goo.gl/rVWkEHsaHazDMm3X7" 
+   target="_blank">
+   View ABESEC on Map
+</a>
 <hr>
 </body>
 </html>
