--- a/exp10.html
+++ b/exp10.html
@@ -26,7 +26,8 @@
 
   <section>
     <h1>Welcome to ShopEase!</h1>
-    <p>Your one-stop destination for all shopping needs.</p>
+    <p>Your one-stop destination for all
+       shopping needs.</p>
   </section>
 
 </body>
